--- a/personal-trainer/package.json
+++ b/personal-trainer/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/react-select": "^5.0.0",
     "mysql2": "^3.14.1",
     "next": "^15.3.1",
     "react": "^19.0.0",
